resources/private/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-private
  namespace: private
  labels:
    app: private
spec:
  selector:
    matchLabels:
      app: private
  replicas: 1
  
  template:
    metadata:
      labels:
        app: private
    spec:
      containers:
      - name: private
        image: gijsvandulmen/echoserver:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
            memory: "101Mi"
          limits:
            cpu: "100m"
            memory: "120Mi"
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 600
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 2
      terminationGracePeriodSeconds: 2
