resources/private/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-private
  namespace: private
  labels:
    app: private
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: private
